# goit-pythonweb-hw-10

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1_init.py  8499a839b0d3_add_users_table.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  rate_limiter.py  upload_file.py  users.py
src/services/templates/: verify_email.html
